<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
	</parent>
	<groupId>com.sea.sistemy</groupId>
	<artifactId>app.user</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>app.user</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>1.8</java.version> <!-- Certifique-se de usar "1.8" para o
		Java 8 -->
	</properties>

	<dependencies>
		<!-- Spring Data JPA -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- Spring Web -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- Banco de dados H2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Teste Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>  
		    <groupId>org.hibernate.validator</groupId>  
		    <artifactId>hibernate-validator</artifactId>    
		</dependency>  
		<dependency>  
		    <groupId>javax.validation</groupId>  
		    <artifactId>validation-api</artifactId>    
		</dependency>
		
		<!-- Spring Security -->  
		<dependency>  
		    <groupId>org.springframework.boot</groupId>  
		    <artifactId>spring-boot-starter-security</artifactId>  
		</dependency> 
		
		<dependency>  
		    <groupId>org.springframework.security</groupId>  
		    <artifactId>spring-security-test</artifactId>  
		    <scope>test</scope>  
		</dependency>
		 
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version><!--$NO-MVN-MAN-VER$-->
			<scope>provided</scope>			
			<optional>true</optional>
		</dependency>		

<!-- JSON Web Token (JWT) -->  
		<dependency>  
		    <groupId>io.jsonwebtoken</groupId>  
		    <artifactId>jjwt-api</artifactId>  
		    <version>0.11.5</version>  
		</dependency>  
		<dependency>  
		    <groupId>io.jsonwebtoken</groupId>  
		    <artifactId>jjwt-impl</artifactId>  
		    <version>0.11.5</version>  
		</dependency>  
		<dependency>  
		    <groupId>io.jsonwebtoken</groupId>  
		    <artifactId>jjwt-jackson</artifactId>  
		    <version>0.11.5</version>  
		</dependency>
		
<!-- Flyway -->
		<dependency>  
		    <groupId>org.flywaydb</groupId>  
		    <artifactId>flyway-core</artifactId>  
		</dependency>
		
		<!-- Dependência Auth0 JWT -->  
    	<dependency>  
	        <groupId>com.auth0</groupId>  
	        <artifactId>java-jwt</artifactId>  
	        <version>3.18.2</version> <!-- Ou uma versão mais recente -->  
    	</dependency>
    	
    	<!-- MySQL Connector/J -->  
		<dependency>  
		    <groupId>mysql</groupId>  
		    <artifactId>mysql-connector-java</artifactId>  
		    <version>8.0.29</version> <!-- Verifique se essa é a versão mais recente -->  
		</dependency>
		
	</dependencies>

	<build>
		<plugins>
			<!-- Maven Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<!-- Spring Boot Maven Plugin -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>
